updating some files

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ body {
   }
 
   .offer1 {
-    margin: 0 auto;
+    margin: 0 auto !important;
     margin-bottom: 60px !important;
 
   }
@@ -108,7 +108,7 @@ body {
 
 @media (min-width: 576px) and (max-width: 767px) {
   .category h1 {
-    font-size: 87px;
+    font-size: 87px !important;
   }
 
   .offer1 {
@@ -133,7 +133,7 @@ body {
 
   /* category */
   .category h1 {
-    font-size: 135px;
+    font-size: 135px !important;
   }
 
   .about {
