--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 /********divider star**********/
 .astrodivider {
   margin: 64px auto;
@@ -68,7 +66,7 @@
     height: auto !important;
     width: 300px;
     margin: 0 auto !important;
-
+    margin-bottom: 15px !important;
   }
 
   .card img {
