--- a/src/App.css
+++ b/src/App.css
@@ -83,11 +83,11 @@
   }
 
   .login {
-    width: 100%;
+    width: 100% !important;
   }
 
   .login input {
-    padding: 5px 47px;
+    padding: 5px 47px !important;
   }
 }
 
@@ -105,11 +105,11 @@
   }
 
   .login {
-    width: 100%;
+    width: 100% !important;
   }
 
   .login input {
-    padding: 5px 47px;
+    padding: 5px 47px !important;
   }
 }
 
